fixed text overlap
problem due to fixed nav and fluid container

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body{
 }
 
 .navbar-header .navbar-brand{
-  padding: 12px 0px;
+  padding: 10px 20px;
 }
 
 .active{
